improve grid spacing, fix navbar accordingly

--- a/less/components/_navbar.less
+++ b/less/components/_navbar.less
@@ -46,6 +46,13 @@
     float: none;
     clear: both;
   }
+
+  @media (min-width: @grid-float-breakpoint) and (max-width: 1200px) {
+    &.navbar-nav > li > a {
+      padding-left: @navbar-padding-horizontal * 1.3;
+      padding-right: @navbar-padding-horizontal * 1.3;
+    }
+  }
 }
 
 .navbar-phone{
@@ -90,7 +97,6 @@
     font-size: 14px;
     font-family: @headings-font-family;
     font-weight: bold;
-    padding-left: 20px;
   }
 }
 
@@ -113,6 +119,10 @@
   .dropdown-menu{
     border: none;
     box-shadow: 0 2px 6px rgba(0,0,0,.3);
+  }
+
+  .navbar-search {
+    padding-right: 0;
   }
 }
 
