--- a/less/config/_variables.less
+++ b/less/config/_variables.less
@@ -5,6 +5,7 @@
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
+
 @state-success-text:             @brand-success;
 @state-success-bg:               lighten(@state-success-text, 35%);
 
@@ -46,3 +47,5 @@
 @breadcrumb-bg: transparent;
 @breadcrumb-color: #fff;
 @breadcrumb-active-color: #fff;
+
+@grid-gutter-width: 40px;
